Se agregaron iconos en la categoria de los productos

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -283,6 +283,71 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "7921777c": {
+          "id": "7921777c",
+          "path": "img/iconos/Identidad-Corporativa.jpg",
+          "output": "img/iconos/Identidad-Corporativa.jpg",
+          "name": "Identidad-Corporativa.jpg",
+          "category": "IMAGE",
+          "size": 50750,
+          "type": "jpg",
+          "initialSize": 50750,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "335b6a4f": {
+          "id": "335b6a4f",
+          "path": "img/iconos/Licencias.jpg",
+          "output": "img/iconos/Licencias.jpg",
+          "name": "Licencias.jpg",
+          "category": "IMAGE",
+          "size": 41449,
+          "type": "jpg",
+          "initialSize": 41449,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "aa8fa7dd": {
+          "id": "aa8fa7dd",
+          "path": "img/iconos/Juvenil.jpg",
+          "output": "img/iconos/Juvenil.jpg",
+          "name": "Juvenil.jpg",
+          "category": "IMAGE",
+          "size": 41399,
+          "type": "jpg",
+          "initialSize": 41399,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "41675a76": {
+          "id": "41675a76",
+          "path": "img/iconos/Infantil.jpg",
+          "output": "img/iconos/Infantil.jpg",
+          "name": "Infantil.jpg",
+          "category": "IMAGE",
+          "size": 59064,
+          "type": "jpg",
+          "initialSize": 59064,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "29e82839": {
+          "id": "29e82839",
+          "path": "img/iconos/Convencional.jpg",
+          "output": "img/iconos/Convencional.jpg",
+          "name": "Convencional.jpg",
+          "category": "IMAGE",
+          "size": 12661,
+          "type": "jpg",
+          "initialSize": 12661,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
