--- a/prepros.cfg
+++ b/prepros.cfg
@@ -226,22 +226,6 @@
           "height": 0,
           "width": 0
         },
-        "e0f29de2": {
-          "id": "e0f29de2",
-          "path": "js/hide.js",
-          "output": "js/hide-dist.js",
-          "name": "hide.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "d6c29693": {
           "id": "d6c29693",
           "path": "img/fondo2.jpg",
@@ -348,6 +332,22 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "1943fbf7": {
+          "id": "1943fbf7",
+          "path": "css/transponer.css",
+          "output": "css/transponer-dist.css",
+          "name": "transponer.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
